[gd_scene load_steps=6 format=2]

[ext_resource path="res://juego/Nave/NaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/Enemigos/EnemigoOrbital.png" type="Texture" id=2]
[ext_resource path="res://juego/Proyectil/canion.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/Enemigos/EnemigoOrbital.gd" type="Script" id=4]
[ext_resource path="res://juego/Proyectil/ProyectilEnemigo.tscn" type="PackedScene" id=5]

[node name="EnemigoOrbital" instance=ExtResource( 1 )]
collision_layer = 2
mode = 3
script = ExtResource( 4 )
rango_max_ataque = 1400.0
velocidad = 400.0

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 7, 1 )
rotation = 1.5708

[node name="canion" parent="." index="4" instance=ExtResource( 3 )]
proyectil = ExtResource( 5 )
cadencia_disparo = 0.7
velocidad_proyectil = 1000
danio_proyectil = 1

[node name="PuntoIzq" parent="canion" index="0"]
position = Vector2( 76, -29 )

[node name="PuntoDer" parent="canion" index="1"]
position = Vector2( 75, 34 )

[node name="DetectorObstaculo" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 1500, 0 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[connection signal="body_entered" from="." to="." method="_on_EnemigoOrbital_body_entered"]

[editable path="canion"]
